--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 
 
                 <div class="det">
-                    <a href="subjects/quiz.html"><img src="images/courses/d1.png">Daily Quiz</a>
+                    <a href="#"><img src="images/courses/d1.png">Daily Quiz</a>
                 </div>
             </div>
         </center>
