--- a/index.html
+++ b/index.html
@@ -301,7 +301,7 @@
     <footer>
         <div class="footer-container">
             <div class="left-col">
-                <img src="images/icon/ski" style="width: 200px;">
+                <img src="images/icon/logoss.png" style="width: 200px;">
                 <div class="logo"></div>
                 <div class="social-media">
                     <a href="#"><img src="images/icon\fb.png"></a>
